; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_javascript.c_script_split_path.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_javascript.c_script_split_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @script_split_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @script_split_path(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.TYPE_3__, align 4
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i8* @js_tostring(i32* %5, i32 1)
  store i8* %6, i8** %3, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = call i64 @mp_dirname(i8* %7)
  %9 = bitcast %struct.TYPE_3__* %4 to i64*
  store i64 %8, i64* %9, align 4
  %10 = load i32*, i32** %2, align 8
  %11 = call i32 @js_newarray(i32* %10)
  %12 = load i32*, i32** %2, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @js_pushlstring(i32* %12, i32 %14, i32 %16)
  %18 = load i32*, i32** %2, align 8
  %19 = call i32 @js_setindex(i32* %18, i32 -2, i32 0)
  %20 = load i32*, i32** %2, align 8
  %21 = load i8*, i8** %3, align 8
  %22 = call i32 @mp_basename(i8* %21)
  %23 = call i32 @js_pushstring(i32* %20, i32 %22)
  %24 = load i32*, i32** %2, align 8
  %25 = call i32 @js_setindex(i32* %24, i32 -2, i32 1)
  ret void
}

declare dso_local i8* @js_tostring(i32*, i32) #1

declare dso_local i64 @mp_dirname(i8*) #1

declare dso_local i32 @js_newarray(i32*) #1

declare dso_local i32 @js_pushlstring(i32*, i32, i32) #1

declare dso_local i32 @js_setindex(i32*, i32, i32) #1

declare dso_local i32 @js_pushstring(i32*, i32) #1

declare dso_local i32 @mp_basename(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
